--- a/JavaScript/clase11/css/style.css
+++ b/JavaScript/clase11/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
+
 *{
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -6,17 +8,20 @@
   box-sizing: border-box;
 }
 
+
 body{
   overflow: hidden;
 }
 
+
 section{
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(to bottom, #999, #888);
 }
+
 
 section .color{
   position: absolute;
@@ -25,29 +30,32 @@ section .color{
 
 section .color:nth-child(1){
   top: -350px;
-  width: 600px; 
+  width: 600px;
   height: 600px;
-  background: #355aff;
+  background: #ff359b;
 }
 
 section .color:nth-child(2){
-  bottom: -150px; 
-  left: 100px; 
-  width: 500px; 
+  bottom: -150px;
+  left: 100px;
+  width: 500px;
   height: 500px;
-  background: #7548df;
+  background: #fffd87;
 }
 
 section .color:nth-child(3){
-  bottom: 50px; 
-  right: 100px; 
-  width: 300px; 
+  bottom: 50px;
+  right: 100px;
+  width: 300px;
   height: 300px;
   background: #00d2ff;
 }
+
+
 .box{
   position: relative;
 }
+
 
 .box .square{
   position: absolute;
@@ -62,46 +70,38 @@ section .color:nth-child(3){
   animation-delay: calc(-1s * var(--i));
 }
 
+
 @keyframes animate{
-  0%,100%{
-    transform: translateY(-40px);
-  }
-  50%{
-    transform: translateY(40px);
-  }
+  0%,100%{ transform: translateY(-40px); }
+  50%   { transform: translateY(40px);  }
 }
 
-.box .square:nth-child(1){
-  top: -50px;
-  right: -60px;
-  width: 100px;
-  height: 100px;
+.box .square:nth-child(1){      
+  top: -70px;
+  right: -80px;
+  width: 160px;
+  height: 160px;
 }
-.box .square:nth-child(2){
-  top: 150px;
-  left: -100px;
+
+.box .square:nth-child(2){      
+  top: 180px;
+  right: -60px;
+  width: 130px;
+  height: 130px;
+}
+
+.box .square:nth-child(3){      
+  bottom: 10px;
+  left: -60px;
+  width: 150px;
+  height: 150px;
+}
+
+.box .square:nth-child(4){      
+  top: 100px;
+  left: -80px;
   width: 120px;
   height: 120px;
-  z-index: 2;
-}
-.box .square:nth-child(3){
-  bottom: 50px;
-  right: -60px;
-  width: 80px;
-  height: 80px;
-  z-index: 2;
-}
-.box .square:nth-child(4){
-  bottom: -80px;
-  left: 100px;
-  width: 50px;
-  height: 50px;
-}
-.box .square:nth-child(5){
-  top: -80px;
-  left: 140px;
-  width: 60px;
-  height: 60px;
 }
 
 .container{
